# ot-harjoitustyo

./: .coverage  .gitignore  .ssh  .ssh.pub  README.md  pyproject.toml  tasks.py
Budjetointi-app/: .coverage  pyproject.toml  tasks.py
Budjetointi-app/dokumentaatio/: changelog.md  tuntikirjanpito.md
Budjetointi-app/src/: budjet.py
Budjetointi-app/src/tests/: user_test.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: README.md  eka.txt  gitlog.txt  kolmas.txt  komentorivi.txt
laskarit/viikko1/dokumentaatio/: tuntikirjanpito  vaarimusmaarittely.md
laskarit/viikko2/: .coverage
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL-matkakortti.md  hsl-sekvenssikaavio.md  machine.md  monopoli.md
src/: clock.py  game_loop.py  main.py  renderer.py  sudoku.py  sudoku_generator.py
src/tests/: sudoku_generator_test.py  sudoku_test.py
